--- a/iframe-content_01.html
+++ b/iframe-content_01.html
@@ -41,7 +41,7 @@
     <!-- first overlay. id attribute matches our selector -->
 	<div class="simple_overlay" id="mies1">
 			<!-- iFrame -->
-			<iframe class="calculator_iframe" frameborder="0" src="iframe-content_01.html"></iframe>
+			<iframe class="calculator_iframe" frameborder="0" src="iframe_01.html"></iframe>
 	</div>
     <!-- JavaScript at the bottom for fast page loading: http://developer.yahoo.com/performance/rules.html#js_bottom -->
 	
