--- a/iframe-content_04.html
+++ b/iframe-content_04.html
@@ -12,7 +12,7 @@
          More info: h5bp.com/i/378 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>Angebotsrechner 01</title>
+    <title>Angebotsrechner 02</title>
     <meta name="description" content="IG BCE Angebotsrechner">
 
     <!-- Mobile viewport optimized: h5bp.com/viewport -->
@@ -35,9 +35,13 @@
     <!--[if lt IE 7]><p class="chromeframe">Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 
     <!-- Add your site or application content here -->
-    
-    <a href="iframe-content_02.html"><img id="site_content" src="img/angebotsrechner/Angebotsrechner_01.png"/></a>
+    <a class="close"></a>
+    <a href="iframe-content_01.html"><img id="site_content" src="img/angebotsrechner/Angebotsrechner_04.png"/></a>
     
     <!-- JavaScript at the bottom for fast page loading: http://developer.yahoo.com/performance/rules.html#js_bottom -->
+   	<!--
+    <script src="js/vendor/jquery.tools.min.js"></script>
+    <script src="js/vendor/jquery-1.7.2.min.js"></script>
+    -->
 </body>
 </html>
